add placeholder copy to fancy box, remove iOS overflow styles (it fucked up stickies and fancy box show/hide)

--- a/index.html
+++ b/index.html
@@ -62,7 +62,20 @@
 		<div class="cancer-sutra opacity0">
 			<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position1 ff">
 				<img src="positions/svg/1.svg">
-				<div class="detail">test</div>
+				<div class="detail detail-image-vertical" data-position="1">
+					<div class="row">
+						<div class="col-sm-6 col-md-6 detail-image">
+							<img src="positions/svg/1.svg">
+						</div>
+						<div class="col-sm-6 col-md-6 detail-text">
+							<h2>Split-Screening</h2>
+							<p>Position yourself in a seated, half-upright position on a bed or deep chair, and bend your knee so that it can be kept effortlessly raised.<p>
+							<p>Now, let your partner straddle this raised knee, facing away, so that yours and her world collide (part, collide, part, and collide again) just around the vagina and thigh. While she’s free to gyrate and thrust to her heart’s and clitoris’ content, *take this rare opportunity to admire the view of an oft-hidden sight: her back.</p>
+							<p>Your gaze should take you from shoulder blades to the small of her back in search of any bumps or discolorations, but that doesn’t mean your eyes get to have all the fun. Allow your fingers to gently caress whatever is in reach, as melanoma can be colorless.</p>
+							<p class="just-the-tip">Just the Tip:<br>*While your partner’s back is to you, you may find your view obstructed by her hair. For those of so inclined and reclined, take matters into your own hands — literally. A firm grasp of her luscious locks won’t just clear the path for your intimately watchful gaze, but can also let you steer the course in the sack.</p>
+						</div>
+					</div>
+				</div>
 			</div>
 			<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position2 ff">
 				<img src="positions/svg/2.alt.svg">
@@ -83,60 +96,68 @@
 			</div>
 			<div data-cancer-type="" data-partnership="mf" class="wow fadeIn position3 mf">
 				<img src="positions/svg/3.svg">
-				<div class="detail" data-position="3">
+				<div class="detail detail-image-vertical" data-position="3">
 					<div class="row">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/3.svg">
 						</div>
 						<div class="col-sm-6 col-md-6 detail-text">
-							<h2></h2>
-							<p><p>
-							<p class="just-the-tip">Just the Tip:<br></p>
+							<h2>Split-Screening</h2>
+							<p>Position yourself in a seated, half-upright position on a bed or deep chair, and bend your knee so that it can be kept effortlessly raised.<p>
+							<p>Now, let your partner straddle this raised knee, facing away, so that yours and her world collide (part, collide, part, and collide again) just around the vagina and thigh. While she’s free to gyrate and thrust to her heart’s and clitoris’ content, *take this rare opportunity to admire the view of an oft-hidden sight: her back.</p>
+							<p>Your gaze should take you from shoulder blades to the small of her back in search of any bumps or discolorations, but that doesn’t mean your eyes get to have all the fun. Allow your fingers to gently caress whatever is in reach, as melanoma can be colorless.</p>
+							<p class="just-the-tip">Just the Tip:<br>*While your partner’s back is to you, you may find your view obstructed by her hair. For those of so inclined and reclined, take matters into your own hands — literally. A firm grasp of her luscious locks won’t just clear the path for your intimately watchful gaze, but can also let you steer the course in the sack.</p>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position4 ff">
 				<img src="positions/svg/4.svg">
-				<div class="detail" data-position="4">
+				<div class="detail detail-image-horizontal" data-position="4">
 					<div class="row">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/4.svg">
 						</div>
 						<div class="col-sm-6 col-md-6 detail-text">
-							<h2></h2>
-							<p><p>
-							<p class="just-the-tip">Just the Tip:<br></p>
+							<h2>Split-Screening</h2>
+							<p>Position yourself in a seated, half-upright position on a bed or deep chair, and bend your knee so that it can be kept effortlessly raised.<p>
+							<p>Now, let your partner straddle this raised knee, facing away, so that yours and her world collide (part, collide, part, and collide again) just around the vagina and thigh. While she’s free to gyrate and thrust to her heart’s and clitoris’ content, *take this rare opportunity to admire the view of an oft-hidden sight: her back.</p>
+							<p>Your gaze should take you from shoulder blades to the small of her back in search of any bumps or discolorations, but that doesn’t mean your eyes get to have all the fun. Allow your fingers to gently caress whatever is in reach, as melanoma can be colorless.</p>
+							<p class="just-the-tip">Just the Tip:<br>*While your partner’s back is to you, you may find your view obstructed by her hair. For those of so inclined and reclined, take matters into your own hands — literally. A firm grasp of her luscious locks won’t just clear the path for your intimately watchful gaze, but can also let you steer the course in the sack.</p>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div data-cancer-type="" data-partnership="mm" class="wow fadeIn position5 mm">
 				<img src="positions/svg/5.svg">
-				<div class="detail" data-position="5">
+				<div class="detail detail-image-horizontal" data-position="5">
 					<div class="row">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/5.svg">
 						</div>
 						<div class="col-sm-6 col-md-6 detail-text">
-							<h2></h2>
-							<p><p>
-							<p class="just-the-tip">Just the Tip:<br></p>
+							<h2>Split-Screening</h2>
+							<p>Position yourself in a seated, half-upright position on a bed or deep chair, and bend your knee so that it can be kept effortlessly raised.<p>
+							<p>Now, let your partner straddle this raised knee, facing away, so that yours and her world collide (part, collide, part, and collide again) just around the vagina and thigh. While she’s free to gyrate and thrust to her heart’s and clitoris’ content, *take this rare opportunity to admire the view of an oft-hidden sight: her back.</p>
+							<p>Your gaze should take you from shoulder blades to the small of her back in search of any bumps or discolorations, but that doesn’t mean your eyes get to have all the fun. Allow your fingers to gently caress whatever is in reach, as melanoma can be colorless.</p>
+							<p class="just-the-tip">Just the Tip:<br>*While your partner’s back is to you, you may find your view obstructed by her hair. For those of so inclined and reclined, take matters into your own hands — literally. A firm grasp of her luscious locks won’t just clear the path for your intimately watchful gaze, but can also let you steer the course in the sack.</p>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position6 ff">
 				<img src="positions/svg/6.svg">
-				<div class="detail" data-position="6">
+				<div class="detail detail-image-vertical" data-position="6">
 					<div class="row">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/6.svg">
 						</div>
 						<div class="col-sm-6 col-md-6 detail-text">
-							<h2></h2>
-							<p><p>
-							<p class="just-the-tip">Just the Tip:<br></p>
+							<h2>Split-Screening</h2>
+							<p>Position yourself in a seated, half-upright position on a bed or deep chair, and bend your knee so that it can be kept effortlessly raised.<p>
+							<p>Now, let your partner straddle this raised knee, facing away, so that yours and her world collide (part, collide, part, and collide again) just around the vagina and thigh. While she’s free to gyrate and thrust to her heart’s and clitoris’ content, *take this rare opportunity to admire the view of an oft-hidden sight: her back.</p>
+							<p>Your gaze should take you from shoulder blades to the small of her back in search of any bumps or discolorations, but that doesn’t mean your eyes get to have all the fun. Allow your fingers to gently caress whatever is in reach, as melanoma can be colorless.</p>
+							<p class="just-the-tip">Just the Tip:<br>*While your partner’s back is to you, you may find your view obstructed by her hair. For those of so inclined and reclined, take matters into your own hands — literally. A firm grasp of her luscious locks won’t just clear the path for your intimately watchful gaze, but can also let you steer the course in the sack.</p>
 						</div>
 					</div>
 				</div>
@@ -149,84 +170,96 @@
 							<img src="positions/svg/7.svg">
 						</div>
 						<div class="col-sm-6 col-md-6 detail-text">
-							<h2></h2>
-							<p><p>
-							<p class="just-the-tip">Just the Tip:<br></p>
+							<h2>Split-Screening</h2>
+							<p>Position yourself in a seated, half-upright position on a bed or deep chair, and bend your knee so that it can be kept effortlessly raised.<p>
+							<p>Now, let your partner straddle this raised knee, facing away, so that yours and her world collide (part, collide, part, and collide again) just around the vagina and thigh. While she’s free to gyrate and thrust to her heart’s and clitoris’ content, *take this rare opportunity to admire the view of an oft-hidden sight: her back.</p>
+							<p>Your gaze should take you from shoulder blades to the small of her back in search of any bumps or discolorations, but that doesn’t mean your eyes get to have all the fun. Allow your fingers to gently caress whatever is in reach, as melanoma can be colorless.</p>
+							<p class="just-the-tip">Just the Tip:<br>*While your partner’s back is to you, you may find your view obstructed by her hair. For those of so inclined and reclined, take matters into your own hands — literally. A firm grasp of her luscious locks won’t just clear the path for your intimately watchful gaze, but can also let you steer the course in the sack.</p>
 						</div>
 					</div>
 				</div>
 			</div>-->
 			<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position8 ff">
 				<img src="positions/svg/8.svg">
-				<div class="detail" data-position="8">
+				<div class="detail detail-image-vertical" data-position="8">
 					<div class="row">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/8.svg">
 						</div>
 						<div class="col-sm-6 col-md-6 detail-text">
-							<h2></h2>
-							<p><p>
-							<p class="just-the-tip">Just the Tip:<br></p>
+							<h2>Split-Screening</h2>
+							<p>Position yourself in a seated, half-upright position on a bed or deep chair, and bend your knee so that it can be kept effortlessly raised.<p>
+							<p>Now, let your partner straddle this raised knee, facing away, so that yours and her world collide (part, collide, part, and collide again) just around the vagina and thigh. While she’s free to gyrate and thrust to her heart’s and clitoris’ content, *take this rare opportunity to admire the view of an oft-hidden sight: her back.</p>
+							<p>Your gaze should take you from shoulder blades to the small of her back in search of any bumps or discolorations, but that doesn’t mean your eyes get to have all the fun. Allow your fingers to gently caress whatever is in reach, as melanoma can be colorless.</p>
+							<p class="just-the-tip">Just the Tip:<br>*While your partner’s back is to you, you may find your view obstructed by her hair. For those of so inclined and reclined, take matters into your own hands — literally. A firm grasp of her luscious locks won’t just clear the path for your intimately watchful gaze, but can also let you steer the course in the sack.</p>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div data-cancer-type="" data-partnership="mf" class="wow fadeIn position9 mf">
 				<img src="positions/svg/9.svg">
-				<div class="detail" data-position="9">
+				<div class="detail detail-image-vertical" data-position="9">
 					<div class="row">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/9.svg">
 						</div>
 						<div class="col-sm-6 col-md-6 detail-text">
-							<h2></h2>
-							<p><p>
-							<p class="just-the-tip">Just the Tip:<br></p>
+							<h2>Split-Screening</h2>
+							<p>Position yourself in a seated, half-upright position on a bed or deep chair, and bend your knee so that it can be kept effortlessly raised.<p>
+							<p>Now, let your partner straddle this raised knee, facing away, so that yours and her world collide (part, collide, part, and collide again) just around the vagina and thigh. While she’s free to gyrate and thrust to her heart’s and clitoris’ content, *take this rare opportunity to admire the view of an oft-hidden sight: her back.</p>
+							<p>Your gaze should take you from shoulder blades to the small of her back in search of any bumps or discolorations, but that doesn’t mean your eyes get to have all the fun. Allow your fingers to gently caress whatever is in reach, as melanoma can be colorless.</p>
+							<p class="just-the-tip">Just the Tip:<br>*While your partner’s back is to you, you may find your view obstructed by her hair. For those of so inclined and reclined, take matters into your own hands — literally. A firm grasp of her luscious locks won’t just clear the path for your intimately watchful gaze, but can also let you steer the course in the sack.</p>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position10 ff">
 				<img src="positions/svg/10.svg">
-				<div class="detail" data-position="11">
+				<div class="detail detail-image-horizontal" data-position="10">
 					<div class="row">
 						<div class="col-sm-6 col-md-6 detail-image">
-							<img src="positions/svg/11.svg">
+							<img src="positions/svg/10.svg">
 						</div>
 						<div class="col-sm-6 col-md-6 detail-text">
-							<h2></h2>
-							<p><p>
-							<p class="just-the-tip">Just the Tip:<br></p>
+							<h2>Split-Screening</h2>
+							<p>Position yourself in a seated, half-upright position on a bed or deep chair, and bend your knee so that it can be kept effortlessly raised.<p>
+							<p>Now, let your partner straddle this raised knee, facing away, so that yours and her world collide (part, collide, part, and collide again) just around the vagina and thigh. While she’s free to gyrate and thrust to her heart’s and clitoris’ content, *take this rare opportunity to admire the view of an oft-hidden sight: her back.</p>
+							<p>Your gaze should take you from shoulder blades to the small of her back in search of any bumps or discolorations, but that doesn’t mean your eyes get to have all the fun. Allow your fingers to gently caress whatever is in reach, as melanoma can be colorless.</p>
+							<p class="just-the-tip">Just the Tip:<br>*While your partner’s back is to you, you may find your view obstructed by her hair. For those of so inclined and reclined, take matters into your own hands — literally. A firm grasp of her luscious locks won’t just clear the path for your intimately watchful gaze, but can also let you steer the course in the sack.</p>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div data-cancer-type="" data-partnership="mf" class="wow fadeIn position11 mf">
 				<img src="positions/svg/11.svg">
-				<div class="detail" data-position="12">
+				<div class="detail detail-image-vertical" data-position="12">
 					<div class="row">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/12.svg">
 						</div>
 						<div class="col-sm-6 col-md-6 detail-text">
-							<h2></h2>
-							<p><p>
-							<p class="just-the-tip">Just the Tip:<br></p>
+							<h2>Split-Screening</h2>
+							<p>Position yourself in a seated, half-upright position on a bed or deep chair, and bend your knee so that it can be kept effortlessly raised.<p>
+							<p>Now, let your partner straddle this raised knee, facing away, so that yours and her world collide (part, collide, part, and collide again) just around the vagina and thigh. While she’s free to gyrate and thrust to her heart’s and clitoris’ content, *take this rare opportunity to admire the view of an oft-hidden sight: her back.</p>
+							<p>Your gaze should take you from shoulder blades to the small of her back in search of any bumps or discolorations, but that doesn’t mean your eyes get to have all the fun. Allow your fingers to gently caress whatever is in reach, as melanoma can be colorless.</p>
+							<p class="just-the-tip">Just the Tip:<br>*While your partner’s back is to you, you may find your view obstructed by her hair. For those of so inclined and reclined, take matters into your own hands — literally. A firm grasp of her luscious locks won’t just clear the path for your intimately watchful gaze, but can also let you steer the course in the sack.</p>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div data-cancer-type="" data-partnership="mm" class="wow fadeIn position12 mm">
 				<img src="positions/svg/12.svg">
-				<div class="detail" data-position="2">
+				<div class="detail detail-image-horizontal" data-position="2">
 					<div class="row">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/2.svg">
 						</div>
 						<div class="col-sm-6 col-md-6 detail-text">
-							<h2></h2>
-							<p><p>
-							<p class="just-the-tip">Just the Tip:<br></p>
+							<h2>Split-Screening</h2>
+							<p>Position yourself in a seated, half-upright position on a bed or deep chair, and bend your knee so that it can be kept effortlessly raised.<p>
+							<p>Now, let your partner straddle this raised knee, facing away, so that yours and her world collide (part, collide, part, and collide again) just around the vagina and thigh. While she’s free to gyrate and thrust to her heart’s and clitoris’ content, *take this rare opportunity to admire the view of an oft-hidden sight: her back.</p>
+							<p>Your gaze should take you from shoulder blades to the small of her back in search of any bumps or discolorations, but that doesn’t mean your eyes get to have all the fun. Allow your fingers to gently caress whatever is in reach, as melanoma can be colorless.</p>
+							<p class="just-the-tip">Just the Tip:<br>*While your partner’s back is to you, you may find your view obstructed by her hair. For those of so inclined and reclined, take matters into your own hands — literally. A firm grasp of her luscious locks won’t just clear the path for your intimately watchful gaze, but can also let you steer the course in the sack.</p>
 						</div>
 					</div>
 				</div>
