--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<link rel="stylesheet" href="css/animate.css"></script>
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"></script>
-	<link rel="stylesheet" href="fancybox/jquery.fancybox.css"></script>
+	<!--<link rel="stylesheet" href="fancybox/jquery.fancybox.css"></script>-->
+	<link rel="stylesheet" href="fancybox/v3beta/jquery.fancybox.css"></script>
 	<link rel="stylesheet" href="css/app.css"></script>
 	<!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
@@ -288,7 +289,8 @@
 	<script src="js/hammer.min.js"></script>
 	<script src="js/isotope.pkgd.min.js"></script>
 	<script src="js/assets.js"></script>
-	<script src="fancybox/jquery.fancybox.pack.js"></script>
+	<!--<script src="fancybox/jquery.fancybox.pack.js"></script>-->
+	<script src="fancybox/v3beta/jquery.fancybox.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
