--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<link rel="stylesheet" href="css/animate.css"></script>
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"></script>
-	<!--<link rel="stylesheet" href="fancybox/jquery.fancybox.css"></script>-->
-	<link rel="stylesheet" href="fancybox/v3beta/jquery.fancybox.css"></script>
+	<link rel="stylesheet" href="fancybox/jquery.fancybox.css"></script>
+	<!--<link rel="stylesheet" href="fancybox/v3beta/jquery.fancybox.css"></script>-->
 	<link rel="stylesheet" href="css/app.css"></script>
 	<!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
@@ -64,7 +64,7 @@
 			<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position1 ff">
 				<img src="positions/svg/1.svg">
 				<div class="detail detail-image-vertical" data-position="1">
-					<div class="row">
+					<div class="row-fluid">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/1.svg">
 						</div>
@@ -81,7 +81,7 @@
 			<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position2 ff">
 				<img src="positions/svg/2.alt.svg">
 				<div class="detail detail-image-horizontal" data-position="2">
-					<div class="row">
+					<div class="row-fluid">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/2.alt.svg">
 						</div>
@@ -98,7 +98,7 @@
 			<div data-cancer-type="" data-partnership="mf" class="wow fadeIn position3 mf">
 				<img src="positions/svg/3.svg">
 				<div class="detail detail-image-vertical" data-position="3">
-					<div class="row">
+					<div class="row-fluid">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/3.svg">
 						</div>
@@ -115,7 +115,7 @@
 			<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position4 ff">
 				<img src="positions/svg/4.svg">
 				<div class="detail detail-image-horizontal" data-position="4">
-					<div class="row">
+					<div class="row-fluid">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/4.svg">
 						</div>
@@ -132,7 +132,7 @@
 			<div data-cancer-type="" data-partnership="mm" class="wow fadeIn position5 mm">
 				<img src="positions/svg/5.svg">
 				<div class="detail detail-image-horizontal" data-position="5">
-					<div class="row">
+					<div class="row-fluid">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/5.svg">
 						</div>
@@ -149,7 +149,7 @@
 			<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position6 ff">
 				<img src="positions/svg/6.svg">
 				<div class="detail detail-image-vertical" data-position="6">
-					<div class="row">
+					<div class="row-fluid">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/6.svg">
 						</div>
@@ -166,7 +166,7 @@
 			<!--<div data-cancer-type="" data-partnership="mm" class="wow fadeIn position7 mm">
 				<img src="positions/svg/7.svg">
 				<div class="detail" data-position="7">
-					<div class="row">
+					<div class="row-fluid">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/7.svg">
 						</div>
@@ -183,7 +183,7 @@
 			<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position8 ff">
 				<img src="positions/svg/8.svg">
 				<div class="detail detail-image-vertical" data-position="8">
-					<div class="row">
+					<div class="row-fluid">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/8.svg">
 						</div>
@@ -200,7 +200,7 @@
 			<div data-cancer-type="" data-partnership="mf" class="wow fadeIn position9 mf">
 				<img src="positions/svg/9.svg">
 				<div class="detail detail-image-vertical" data-position="9">
-					<div class="row">
+					<div class="row-fluid">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/9.svg">
 						</div>
@@ -217,7 +217,7 @@
 			<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position10 ff">
 				<img src="positions/svg/10.svg">
 				<div class="detail detail-image-horizontal" data-position="10">
-					<div class="row">
+					<div class="row-fluid">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/10.svg">
 						</div>
@@ -234,7 +234,7 @@
 			<div data-cancer-type="" data-partnership="mf" class="wow fadeIn position11 mf">
 				<img src="positions/svg/11.svg">
 				<div class="detail detail-image-vertical" data-position="12">
-					<div class="row">
+					<div class="row-fluid">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/12.svg">
 						</div>
@@ -251,7 +251,7 @@
 			<div data-cancer-type="" data-partnership="mm" class="wow fadeIn position12 mm">
 				<img src="positions/svg/12.svg">
 				<div class="detail detail-image-horizontal" data-position="2">
-					<div class="row">
+					<div class="row-fluid">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/2.svg">
 						</div>
@@ -289,8 +289,8 @@
 	<script src="js/hammer.min.js"></script>
 	<script src="js/isotope.pkgd.min.js"></script>
 	<script src="js/assets.js"></script>
-	<!--<script src="fancybox/jquery.fancybox.pack.js"></script>-->
-	<script src="fancybox/v3beta/jquery.fancybox.js"></script>
+	<script src="fancybox/jquery.fancybox.pack.js"></script>
+	<!--<script src="fancybox/v3beta/jquery.fancybox.js"></script>-->
 	<script src="js/app.js"></script>
 </body>
 </html>
