moved data-position, duplicated for fancy box support (wrapper with data needs to be there when transferred to fb overlay), added vertical MQ for tablet menu, height must accommodate all filters: 372px

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 			</svg>
 		</div>
 		<div class="cancer-sutra opacity0">
-			<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position1 ff">
+			<div data-position="1" data-cancer-type="breast" data-partnership="ff">
 				<img src="positions/svg/1.svg">
-				<div class="detail detail-image-vertical" data-position="1">
+				<div data-position="1" class="detail detail-image-vertical">
 					<div class="row-fluid">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/1.svg">
@@ -78,9 +78,9 @@
 					</div>
 				</div>
 			</div>
-			<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position2 ff">
+			<div data-position="2" data-cancer-type="skin" data-partnership="mf">
 				<img src="positions/svg/2.alt.svg">
-				<div class="detail detail-image-horizontal" data-position="2">
+				<div data-position="2" class="detail detail-image-horizontal">
 					<div class="row-fluid">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/2.alt.svg">
@@ -95,9 +95,9 @@
 					</div>
 				</div>
 			</div>
-			<div data-cancer-type="" data-partnership="mf" class="wow fadeIn position3 mf">
+			<div data-position="3" data-cancer-type="testicular" data-partnership="mf">
 				<img src="positions/svg/3.svg">
-				<div class="detail detail-image-vertical" data-position="3">
+				<div data-position="3" class="detail detail-image-vertical">
 					<div class="row-fluid">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/3.svg">
@@ -112,9 +112,9 @@
 					</div>
 				</div>
 			</div>
-			<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position4 ff">
+			<div data-position="4" data-cancer-type="skin" data-partnership="ff">
 				<img src="positions/svg/4.svg">
-				<div class="detail detail-image-horizontal" data-position="4">
+				<div data-position="4" class="detail detail-image-horizontal">
 					<div class="row-fluid">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/4.svg">
@@ -129,9 +129,9 @@
 					</div>
 				</div>
 			</div>
-			<div data-cancer-type="" data-partnership="mm" class="wow fadeIn position5 mm">
+			<div data-position="5" data-cancer-type="prostate" data-partnership="mm">
 				<img src="positions/svg/5.svg">
-				<div class="detail detail-image-horizontal" data-position="5">
+				<div data-position="5" class="detail detail-image-horizontal">
 					<div class="row-fluid">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/5.svg">
@@ -146,9 +146,9 @@
 					</div>
 				</div>
 			</div>
-			<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position6 ff">
+			<div data-position="6" data-cancer-type="breast" data-partnership="ff">
 				<img src="positions/svg/6.svg">
-				<div class="detail detail-image-vertical" data-position="6">
+				<div data-position="6" class="detail detail-image-vertical">
 					<div class="row-fluid">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/6.svg">
@@ -163,9 +163,9 @@
 					</div>
 				</div>
 			</div>
-			<!--<div data-cancer-type="" data-partnership="mm" class="wow fadeIn position7 mm">
+			<!--<div data-position="7" data-cancer-type="" data-partnership="mm">
 				<img src="positions/svg/7.svg">
-				<div class="detail" data-position="7">
+				<div data-position="7" class="detail">
 					<div class="row-fluid">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/7.svg">
@@ -180,9 +180,9 @@
 					</div>
 				</div>
 			</div>-->
-			<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position8 ff">
+			<div data-position="8" data-cancer-type="breast" data-partnership="ff">
 				<img src="positions/svg/8.svg">
-				<div class="detail detail-image-vertical" data-position="8">
+				<div data-position="8" class="detail detail-image-vertical">
 					<div class="row-fluid">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/8.svg">
@@ -197,9 +197,9 @@
 					</div>
 				</div>
 			</div>
-			<div data-cancer-type="" data-partnership="mf" class="wow fadeIn position9 mf">
+			<div data-position="9" data-cancer-type="testicular" data-partnership="mf">
 				<img src="positions/svg/9.svg">
-				<div class="detail detail-image-vertical" data-position="9">
+				<div data-position="9" class="detail detail-image-vertical">
 					<div class="row-fluid">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/9.svg">
@@ -214,9 +214,9 @@
 					</div>
 				</div>
 			</div>
-			<div data-cancer-type="" data-partnership="ff" class="wow fadeIn position10 ff">
+			<div data-position="10" data-cancer-type="skin" data-partnership="ff">
 				<img src="positions/svg/10.svg">
-				<div class="detail detail-image-horizontal" data-position="10">
+				<div data-position="10" class="detail detail-image-horizontal">
 					<div class="row-fluid">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/10.svg">
@@ -231,9 +231,9 @@
 					</div>
 				</div>
 			</div>
-			<div data-cancer-type="" data-partnership="mf" class="wow fadeIn position11 mf">
+			<div data-position="11" data-cancer-type="testicular" data-partnership="mf">
 				<img src="positions/svg/11.svg">
-				<div class="detail detail-image-vertical" data-position="12">
+				<div data-position="11" class="detail detail-image-vertical">
 					<div class="row-fluid">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/12.svg">
@@ -248,9 +248,9 @@
 					</div>
 				</div>
 			</div>
-			<div data-cancer-type="" data-partnership="mm" class="wow fadeIn position12 mm">
+			<div data-position="12" data-cancer-type="prostate" data-partnership="mm">
 				<img src="positions/svg/12.svg">
-				<div class="detail detail-image-horizontal" data-position="2">
+				<div data-position="12" class="detail detail-image-horizontal">
 					<div class="row-fluid">
 						<div class="col-sm-6 col-md-6 detail-image">
 							<img src="positions/svg/2.svg">
