added kepler font fam

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"></script>
 	<link rel="stylesheet" href="fancybox/jquery.fancybox.css"></script>
 	<!--<link rel="stylesheet" href="fancybox/v3beta/jquery.fancybox.css"></script>-->
+	<link rel="stylesheet" href="fonts/keplerstd/keplerstd.css"></script>
 	<link rel="stylesheet" href="css/app.css"></script>
 	<!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
