--- a/index.html
+++ b/index.html
@@ -48,18 +48,19 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 		</header>
 		<div class="loader">
-			<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-			width="40px" height="40px" viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
-				<path fill="#000" d="M43.935,25.145c0-10.318-8.364-18.683-18.683-18.683c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615c8.072,0,14.615,6.543,14.615,14.615H43.935z">
-				<animateTrfansform attributeType="xml"
-				attributeName="transform"
-				type="rotate"
-				from="0 25 25"
-				to="360 25 25"
-				dur="0.6s"
-				repeatCount="indefinite"/>
-				</path>
-			</svg>
+			<svg version="1.1" id="loader-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+			     width="40px" height="40px" viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
+			  <path fill="#000" d="M25.251,6.461c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615V6.461z">
+			    <animateTransform attributeType="xml"
+			      attributeName="transform"
+			      type="rotate"
+			      from="0 25 25"
+			      to="360 25 25"
+			      dur="1s"
+			      repeatCount="indefinite"/>
+			    </path>
+			  </svg>
+			</div>
 		</div>
 		<div class="cancer-sutra opacity0">
 			<div data-position="1" data-cancer-type="breast" data-partnership="ff">
@@ -269,18 +270,18 @@
 		</div>
 		<footer class="row uppercase">
 			<div class="col-md-1"></div>
-			<div class="col-md-1 nopadding">
-				<img>
+			<div class="col-md-1 col-sm-2 nopadding">
+				<img src="img/100x100.gif">
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-4 col-sm-4">
 				<span>&copy; 2014 | The Bull White House</span>
-				<span>Contact</span>
+				<span><a href="#">Contact</a></span>
 			</div>
 			<div class="col-md-1"></div>
-			<div class="col-md-1 nopadding">
-				<img>
+			<div class="col-md-1 col-sm-2 nopadding">
+				<img src="img/100x100.gif">
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-4 col-sm-4 acc">
 				<span>In Partnership with<br>The American Cancer Society</span>
 			</div>
 		</footer>
