prelim upgrades re: 1/2/15 call, add mq.css for media queries, removed some bootstrap columns styles, full site is now same as tablet

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<!--<link rel="stylesheet" href="fancybox/v3beta/jquery.fancybox.css"></script>-->
 	<link rel="stylesheet" href="fonts/keplerstd/keplerstd.css"></script>
 	<link rel="stylesheet" href="css/app.css"></script>
+	<link rel="stylesheet" href="css/mq.css"></script>
 	<!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
       <script src="js/respond.js"></script>
@@ -25,7 +26,7 @@
 			</div>
 		</nav>
 		<div class="filters row">
-			<div data-filter-type="cancer-type" class="col-md-6 filter cancer-type">
+			<div data-filter-type="cancer-type" class="filter cancer-type">
 				<h3>Filter by Cancer Type</h3>
 				<ul class="uppercase">
 					<li><a href data-filter="breast" data-toggle="off">Breast</a></li>
@@ -34,7 +35,7 @@
 					<li><a href data-filter="prostate" data-toggle="off">Prostate</a></li>
 				</ul>
 			</div>
-			<div data-filter-type="partnership" class="col-md-6 filter partnership">
+			<div data-filter-type="partnership" class="filter partnership">
 				<h3>Filter by Partnership</h3>
 				<ul class="uppercase">
 					<li><a href data-filter="mm" data-toggle="off" class="test">Male/Male</a></li>
