resolved/simpified bootstrap container styles, greater than width of screen effect, and set margins according to request

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 	<script src="js/modernizr-latest.js"></script>
 </head>
 
-<body class="loading">
-	<div class="wrapper container-fluid">
+<body class="loading container-fluid">
+	<div class="wrapper">
 		<nav class="row">
 			<div class="device-menu">
 				<a class="menu-toggle" href="#"><span></span></a>
