changed up some nomenclature: .filters = nav, cause we now have actual navigation, old 'nav' element is now '.nav-bar' cause it doesn't actually contain navigation elements within.

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
 <body class="loading container-fluid">
 	<div class="wrapper">
-		<nav class="row">
+		<div class="nav-bar row">
 			<div class="device-menu">
 				<a class="menu-toggle" href="#"><span></span></a>
 			</div>
-		</nav>
-		<div class="filters row">
+		</div>
+		<nav class="row">
 			<div data-filter-type="cancer-type" class="filter cancer-type">
 				<h3>Filter by Cancer Type</h3>
 				<ul class="uppercase">
@@ -43,7 +43,7 @@
 					<li><a href data-filter="mf" data-toggle="off">Male/Female</a></li>
 				</ul>
 			</div>
-		</div>
+		</nav>
 		<header class="animated fadeIn row">
 			<h1>The Cancer Sutra</h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
