prelim copy for about section, changed about and "cancer-sutra" to sections with #ids.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body class="loading container-fluid">
-	<div class="wrapper">
+	<div class="positions wrapper">
 		<div class="nav-bar row">
 			<div class="device-menu">
 				<a class="menu-toggle" href="#"><span></span></a>
@@ -63,7 +63,41 @@
 			  </svg>
 			</div>
 		</div>
-		<div class="cancer-sutra opacity0">
+		<section id="about">
+			<div class="one row">
+				<div class="col-md-6 col-md-offset-6">
+					<h2>This project exists to help save lives.</h2>
+					<h3>One tweak, thrust, heave, and pant at a time</h3>
+				</div>
+			</div>
+			<div class="two row">
+				<div class="col-md-6">
+					<h2>Before the What, <em>the Why.</em></h2>
+					<p>Because fear of cancer can be as bad as cancer itself.<br>
+						Because 90% of cancer can be cured if checked by stage one.<br>
+						Beause fear, like cancer, may have the power to spread &mdash;<br>
+						but they both share one major weakness:</p>
+				</div>
+			</div>
+			<div class="three row">
+				<div class="col-md-6 col-md-offset-6">
+					<h2>KNOWLEDGE</h2>
+					<p>Because of all this, The Cancer Sutra is designed to challenge the taboos and conventions about cancer.<br>
+						Firstly by talking about how to look for cancer, not just find it. Secondly, by bringing the fight against cancer, and the prevention of it, out of a place of isolation.</p>
+				</div>
+			</div>
+			<div class="four row">
+				<div class="col-md-6">
+					<h2>After all, saving lives is <em>one thing.</em></h2>
+					<p>Having fun while doing it &mdash; well, that's something we can all get behind. (Or in front of, depending.)</p>
+				</div>
+			</div>
+			<div class="onward">
+				<p>It's time we got to the real thrust of the matter.</p>
+				<a href="#/positions">ONWARD &amp; UNDERWARD</a>
+			</div>
+		</section>
+		<section id="cancer-sutra">
 			<div data-position="1" data-cancer-type="breast" data-partnership="ff">
 				<img src="positions/svg/1.svg">
 				<div data-position="1" class="detail detail-image-vertical">
@@ -268,7 +302,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</section>
 		<footer class="row uppercase">
 			<div class="col-md-1"></div>
 			<div class="col-md-1 col-sm-2 nopadding">
