add route for navigation, add positions.json to store all position data and markup (no more editing in index.html, or moving markup around in the dom for fancybox), separating about and positions in loading routine for navigation purposes.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
 				<div class="col-md-6 col-md-offset-6">
 					<h2>KNOWLEDGE</h2>
 					<p>Because of all this, The Cancer Sutra is designed to challenge the taboos and conventions about cancer.<br>
-						Firstly by talking about how to look for cancer, not just find it. Secondly, by bringing the fight against cancer, and the prevention of it, out of a place of isolation.</p>
+						Firstly by talking about how to look for cancer, not just find it.<br>
+						Secondly, by bringing the fight against cancer, and the prevention of it, out of a place of isolation.</p>
 				</div>
 			</div>
 			<div class="four row">
@@ -321,6 +322,7 @@
 			</div>
 		</footer>
 	</div>
+	<script src="js/routie.min.js"></script>
 	<script src="js/jquery-2.1.1.min.js"></script>
 	<script src="js/imagesloaded.pkgd.min.js"></script>
 	<script src="js/hammer.min.js"></script>
