rolled css3 fancy box alternative (will need IE fallback), reconciled click and hash events for positions, put together about page with SVG (full size backgrounds will need to be shrunk in illustrator to their minimum size i think...thats 480 btw), fixed wrapper issue where closing too early

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		</header>
 		<div class="loader">
 			<svg version="1.1" id="loader-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-			     width="40px" height="40px" viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
+		     width="40px" height="40px" viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
 			  <path fill="#000" d="M25.251,6.461c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615V6.461z">
 			    <animateTransform attributeType="xml"
 			      attributeName="transform"
@@ -59,9 +59,8 @@
 			      to="360 25 25"
 			      dur="1s"
 			      repeatCount="indefinite"/>
-			    </path>
-			  </svg>
-			</div>
+			   </path>
+		  </svg>
 		</div>
 		<section id="about">
 			<div class="one row">
@@ -93,7 +92,7 @@
 					<p>Having fun while doing it &mdash; well, that's something we can all get behind. (Or in front of, depending.)</p>
 				</div>
 			</div>
-			<div class="onward">
+			<div class="onward row">
 				<p>It's time we got to the real thrust of the matter.</p>
 				<a href="#/positions">ONWARD &amp; UNDERWARD</a>
 			</div>
@@ -322,11 +321,15 @@
 			</div>
 		</footer>
 	</div>
+	<div class="overlay overlay-contentscale">
+		nothing
+	</div>
 	<script src="js/routie.min.js"></script>
 	<script src="js/jquery-2.1.1.min.js"></script>
 	<script src="js/imagesloaded.pkgd.min.js"></script>
 	<script src="js/hammer.min.js"></script>
 	<script src="js/isotope.pkgd.min.js"></script>
+	<script src="js/mousetrap.min.js"></script>
 	<script src="js/assets.js"></script>
 	<script src="fancybox/jquery.fancybox.pack.js"></script>
 	<!--<script src="fancybox/v3beta/jquery.fancybox.js"></script>-->
